kqed/src/objects/Refund__c.object
<CustomObject>
    <fields>
        <fullName>CC_Alias__c</fullName>
        <label>CC Alias</label>
        <referenceTo>CC_Alias__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Giving__c</fullName>
        <label>Giving</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RFP_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Method__c</fullName>
        <label>Refund Method</label>
        <picklist>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund_Status_Formula__c</fullName>
        <formula>TEXT(Refund_Status__c)</formula>
        <label>Refund Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Status__c</fullName>
        <label>Refund Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent To Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_message__c</fullName>
        <label>Response_message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROCESS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Refund</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Refund #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <recordTypes>
        <fullName>Refund_by_Charge_Card</fullName>
        <active>true</active>
        <label>Refund by Charge Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund_by_Check</fullName>
        <active>true</active>
        <label>Refund by Check</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Can_not_change_Giving</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Giving__c ) ,NOT(ISNEW() ))</errorConditionFormula>
        <errorDisplayField>Giving__c</errorDisplayField>
        <errorMessage>Can not change Giving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFP_submitted_should_be_checked</fullName>
        <active>false</active>
        <description>RFP submitted should be checked if Status is equal to Submitted.</description>
        <errorConditionFormula>AND( NOT(RFP_Submitted__c), TEXT(Refund_Status__c)=&apos;Submitted&apos;)</errorConditionFormula>
        <errorDisplayField>RFP_Submitted__c</errorDisplayField>
        <errorMessage>RFP submitted should be checked.</errorMessage>
    </validationRules>
</CustomObject>